refactor code, show selected person from the list, add error boundaries

--- a/src/components/spinner/styles.css
+++ b/src/components/spinner/styles.css
@@ -79,7 +79,7 @@
   height: 200px;
   display: inline-block;
   overflow: hidden;
-  background: #f1f2f3;
+  /* background: #f1f2f3; */
 }
 .ldio-4pw0hr38n15 {
   width: 100%;
